2.14 (2009-00-00)
Application:
- Translations updated: Czech, Russian.

Libraries:
- Some forgotten strings were made translatable and gettext() was applied to
  some to actually translate them.

Modules:
- Sensolytics (new): Imports Sensolytics file format.
- PNI file: Vertical flipping was removed.


2.13 (2009-02-09)
Application:
- Translations updated: Czech, French, Russian.

Modules:
- Raw graph import (new): Imports simple two-column text files as graphs.
- Distance, Stats and Rougness tools: Copy to clipboard buttons actually work
  (in 2.12 Save button did both actions and Copy did not do anything).
- Nanoscope: Physical y-size is recalculated to conserve the pixel
  y-size/x-size ratio in all files now.  This affects non-square images.
- Stats tool: Angles are exported in degrees as stated, instead of radians.
- HDF4 file: PSI files are flipped vertically to follow the convention.
- All tools: Somewhat inconsistent conversion between pixel and real
  coordinates were unified.

Other:
- File gwydion-thumbnailer.schemas is no longer distributed with paths from the
  packager's system, it is created on the build system with the correct paths.
- Outdated MSVC makefiles released in 2.12 were corrected.


2.12 (2009-01-04)
Application:
- New translations: Russian.
- Translations updated: Czech.
- Tips of the day were added, accessible in Meta -> Tip of the Day.

Libraries:
- libgwyprocess: Some grain corners had not been counted as described in grain
  boundary length calculation.  This was corrected.
- libgwyprocess: New grain quantities boundary minimum and maximum were added.
- libgwyprocess: GwyMaskingType enum was added.
- libgwyddion: New nacro gwy_clear() zeroes memory in a sizeof-safe way.
- libgwyddion: New function gwy_memmem() that wraps or emulates GNU memmem().
- libgwydgets: GwyColorAxis uses two-line labels if number and units do not fit
  on one line together.
- ligwyprocess: DataField methods such as gwy_data_field_set_val() check the