@@ -38,7 +38,7 @@
 #define GWY_TOOL_PROFILE_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj), GWY_TYPE_TOOL_PROFILE, GwyToolProfileClass))
 
 enum {
-    NLINES = 18,
+    NLINES = 1024,
     MAX_THICKNESS = 128,
     MIN_RESOLUTION = 4,
     MAX_RESOLUTION = 16384
@@ -129,7 +129,7 @@ static GwyModuleInfo module_info = {
     &module_register,
     N_("Profile tool, creates profile graphs from selected lines."),
     "Petr Klapetek <klapetek@gwyddion.net>",
-    "2.9",
+    "2.10",
     "David Nečas (Yeti) & Petr Klapetek",
     "2004",
 };
